Update peg grammer for math related stuff

--- a/sample/t.tex
+++ b/sample/t.tex
@@ -2,12 +2,8 @@
 \usepackage{amsmath}
 % abc
 \begin{document}
-  abc \% c $a$
-  \begin{align}
-    \begin{split}
-      a_n \\
-      b_ {n+m}
-    \end{split}
-  \end{align}
-  \verb|abc|
+\begin{displaymath}
+  x + y = \sqrt{1}
+  y+1
+  \end{displaymath}
 \end{document}
