--- a/sample/t.tex
+++ b/sample/t.tex
@@ -2,8 +2,10 @@
 \usepackage{amsmath}
 % abc
 \begin{document}
-\begin{displaymath}
-  x + y = \sqrt{1}
-  y+1
-  \end{displaymath}
+
+asdf
+
+{asdf}
+
+{asdf \enskip asdf hello world \textbf{asdf}}
 \end{document}
